# fishregression

./: Dockerfile  pyproject.toml
note/: LinearRegression.ipynb
src/fishregression/: fr.py  main.py
src/fishregression/model/: manager.py  model.pkl
