[project]
name = "fishregression"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GITSangWoo", email = "dogcenta@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
tests = [
    "pytest>=8.3.2",
]

[tool.pytest.ini_options]
pythonpath=["src"]
